# FocusOnTheRoad

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml
dataset/: dataset.py  load_statefarm.py  make_submission.py  model_selection.py
models/: baselines.py  bodypose.py  losses.py  trainer.py  utils.py  visualize.py
notebooks/: Data Cleaning.ipynb  Exploration.ipynb  FocusOnTheRoad-Ensemble.ipynb
