[tool.poetry]
name = "focusOnTheRoad"
version = "0.1.0"
description = "'Focus on the road' a Machine Learning model that identifies distracted drivers"
authors = ["Ennio <nascaennio@gmail.com>"]
packages = [{ include = "detectors" }]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
numpy = "^1.18.2"
scikit-learn = "^0.22.2"
notebook = "^6.0.3"
tqdm = "^4.45.0"
sagemaker = "^1.55.0"
jupyterthemes = "^0.20.0"
torch = "^1.4.0"
torchvision = "^0.5.0"
sagemaker-containers = "^2.8.6"
mxnet = "^1.6.0"
seaborn = "^0.10.0"
matplotlib = "^3.2.1"
opencv-python = "^4.2.0"
scikit-image = "^0.16.2"
ipywidgets = "^7.5.1"
catboost = "^0.23"

[tool.poetry.dev-dependencies]
black = "==19.3b0"
mypy = "~=0.730"
isort = {extras = ["pyproject"], version = "^4.3.21"}
seed-isort-config = "^2.1.1"

[tool.poetry.scripts]
demo = "detectors.BodyDetector:main"

[tool.isort]
multi_line_output= 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
known_third_party = ["torch"]


[tool.black]
line-length = 100
exclude = '''
(
    \.DS_Store |
    \.githooks |
    \.html$ |
    \.idea |
    \.json$ |
    \.pyc$ |
    \.sql$ |
    \.vscode |
    \.venv |
    node_modules
)
'''

[build-system]
requires = ["poetry>=1.0"]
